<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VITTLES</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_background_music">Background Music</string>
    <string name="pref_title_sound_effect">Sound Effect</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_game_speed">Game Speed</string>
    <string-array name="pref_game_speed_list_titles">
        <item>Fast</item>
        <item>Normal</item>
        <item>Slow</item>
    </string-array>
    <string-array name="pref_game_speed_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_resolution">Resolution</string>
    <string-array name="pref_resolution_list_titles">
        <item>320 X 240</item>
        <item>640 X 480</item>
        <item>1080 X 720</item>
    </string-array>
    <string-array name="pref_resolution_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_title_vittles_ap_prefix">VITTLES AP Prefix</string>
    <string name="pref_default_vittles_ap_prefix">VITTLES</string>

    <!-- Network Setting -->
    <string name="pref_header_network">Network</string>
    <string name="pref_title_vittles_url">VITTLES URL</string>
    <string name="pref_default_vittles_url">http://192.168.42.1:8888</string>
    <string name="pref_title_my_vittles_ap">MY VITTLES NAME</string>
    <string name="pref_default_my_vittles_ap">NO_VITTLES</string>
    <string name="title_activity_waiting_room">WaitingRoomActivity</string>
    <string name="not_connected">Not connected</string>
    <string name="start_battle">start_battle</string>

    <!-- My Vittles Setting -->
    <string name="pref_header_my_vittles">My VITTLES Items</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="banner_ad_unit_id">ca-app-pub-7272787751408875/4382050347</string>

</resources>
