<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="background_music_switch"
        android:title="@string/pref_title_background_music" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="sound_effect_switch"
        android:title="@string/pref_title_sound_effect" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="vibration_switch"
        android:title="@string/pref_title_vibrate" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_game_speed_list_titles"
        android:entryValues="@array/pref_game_speed_list_values"
        android:key="game_speed"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_game_speed" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_resolution_list_titles"
        android:entryValues="@array/pref_resolution_list_values"
        android:key="resolution"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_resolution" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_vittles_ap_prefix"
        android:inputType="textCapWords"
        android:key="vittles_ap_prefix"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_vittles_ap_prefix" />

</PreferenceScreen>
