<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_vittles_url"
        android:inputType="textCapWords"
        android:key="vittles_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_vittles_url" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_my_vittles_ap"
        android:inputType="textCapWords"
        android:key="my_vittles_ap"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_my_vittles_ap" />

</PreferenceScreen>